<resources>
    <string-array name="languages_array">
        <item>English</item>
        <item>Русский</item>
        <item>Українська</item>
    </string-array>

    <string name="chat">CHAT</string>
    <string name="chats">CHATS</string>
    <string name="contacts">CONTACTS</string>
    <string name="settings">SETTINGS</string>
    <string name="language">Language:</string>
    <string name="authors">ⓘ Authors:</string>
    <string name="lightTheme">Theme: Light</string>
    <string name="darkTheme">Theme: Dark</string>
    <string name="back">←BACK</string>
    <string name="goToChat">Go to Chat</string>
    <string name="version">ⓘ Version:</string>
    <string name="randomText">It\'s empty now…</string>
    <string name="enterLogin">Enter login</string>
    <string name="enterPassword">Enter password</string>
    <string name="enterUserName">Enter user name</string>
    <string name="enterChatName">Enter chat name</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="invalidLogin">Invalid login</string>
    <string name="user">User:</string>
    <string name="name">Username:</string>
    <string name="changeName">Click to change username</string>
    <string name="changePassword">Click to change password</string>
    <string name="logout">Click to logout</string>
    <string name="logoutAll">Click to logout all</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="editYourName">Edit your name</string>
    <string name="editYourPassword">Edit your password</string>
    <string name="createNewChat">Create new chat</string>
    <string name="addUser">Add user</string>
    <string name="searchContact">Search contact</string>
    <string name="searchUser">Search user</string>
    <string name="requestManagement">Request management</string>
    <string name="chatInfo">Chat info</string>
    <string name="chatParticipants">Chat participants</string>
    <string name="deleteChat">Delete chat</string>
    <string name="noMessages">No messages</string>
    <string name="enterMessage">Enter message</string>
    <string name="edited">edited</string>
</resources>