<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorBackground"
    tools:context=".auth.ui.fragments.LoginFragment">

    <FrameLayout
        android:id="@+id/frameLogin"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="?colorFragment"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintBottom_toTopOf="@id/loginError"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <EditText
            android:id="@+id/enterLogin"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="start|center"
            android:hint="@string/enterLogin"
            android:inputType="text"
            android:textColor="?colorText"
            android:textColorHint="?colorHintText"
            android:textSize="18sp" />

    </FrameLayout>

    <TextView
        android:id="@+id/loginError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text=""
        android:textColor="?colorSubtext"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/framePassword"
        app:layout_constraintTop_toBottomOf="@id/frameLogin" />

    <FrameLayout
        android:id="@+id/framePassword"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="?colorFragment"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintBottom_toTopOf="@id/passwordError"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginError">

        <EditText
            android:id="@+id/enterPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="start|center"
            android:hint="@string/enterPassword"
            android:inputType="textPassword"
            android:textColor="?colorText"
            android:textColorHint="?colorHintText"
            android:textSize="18sp" />

    </FrameLayout>

    <TextView
        android:id="@+id/passwordError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text=""
        android:textColor="?colorSubtext"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/loginOrPasswordError"
        app:layout_constraintTop_toBottomOf="@id/framePassword" />

    <TextView
        android:id="@+id/loginOrPasswordError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text=""
        android:textColor="?colorSubtext"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/loginButton"
        app:layout_constraintTop_toBottomOf="@id/passwordError" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="?colorBackground"
        android:text="@string/login"
        android:textColor="?colorText"
        android:textFontWeight="1000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginOrPasswordError" />

</androidx.constraintlayout.widget.ConstraintLayout>