<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorBackground"
    tools:context=".settings.ui.SettingsFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="8dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="8dp" />

    <TextView
        android:id="@+id/settingsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/settings"
        android:textColor="?colorText"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/blockUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_elemet"
        android:backgroundTint="?colorFragment"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/settingsText">

        <FrameLayout
            android:id="@+id/frameUserInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/userLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:padding="8dp"
                android:text="@string/user"
                android:textColor="?colorText"
                android:textFontWeight="1"
                android:textSize="21sp" />

        </FrameLayout>

        <View
            android:id="@+id/viewInBlockUser1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/frameUserInfo"
            android:background="?colorLineDetails" />

        <FrameLayout
            android:id="@+id/frameName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewInBlockUser1">

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:padding="8dp"
                android:text="Name:"
                android:textColor="?colorText"
                android:textFontWeight="1"
                android:textSize="21sp" />

            <Button
                android:id="@+id/rename"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:backgroundTint="?colorFragment"
                android:paddingEnd="8dp"
                android:text="Rename"
                android:textColor="@color/red"
                android:textFontWeight="1000"
                android:textSize="21sp" />

        </FrameLayout>

        <View
            android:id="@+id/viewInBlockUser2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/frameName"
            android:background="?colorLineDetails" />

        <FrameLayout
            android:id="@+id/frameLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/viewInBlockUser2">

            <TextView
                android:id="@+id/userLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:padding="8dp"
                android:text="@string/logOutOfAccount"
                android:textColor="?colorText"
                android:textFontWeight="1"
                android:textSize="21sp" />

            <Button
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:backgroundTint="?colorFragment"
                android:paddingEnd="8dp"
                android:text="@string/logout"
                android:textColor="@color/red"
                android:textFontWeight="1000"
                android:textSize="21sp" />

        </FrameLayout>

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/frameTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_elemet"
        android:backgroundTint="?colorFragment"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/blockUser">

        <TextView
            android:id="@+id/themeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:padding="8dp"
            android:text="?themeText"
            android:textColor="?colorText"
            android:textFontWeight="1"
            android:textSize="21sp" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:padding="8dp"
            app:thumbTint="?colorThumb"
            app:trackTint="?colorTrack" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLanguage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_elemet"
        android:backgroundTint="?colorFragment"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/frameTheme">


        <TextView
            android:id="@+id/languageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:padding="8dp"
            android:text="@string/language"
            android:textColor="?colorText"
            android:textFontWeight="1"
            android:textSize="21sp" />

        <Spinner
            android:id="@+id/languageSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:backgroundTint="?colorThumb"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:textColor="?colorText" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameAuthor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_elemet"
        android:backgroundTint="?colorFragment"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/frameLanguage">

        <TextView
            android:id="@+id/authorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:padding="8dp"
            android:text="@string/author"
            android:textColor="?colorText"
            android:textFontWeight="1"
            android:textSize="21sp" />

        <TextView
            android:id="@+id/eestilane"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:padding="8dp"
            android:text="Eestilane"
            android:textColor="@color/red"
            android:textFontWeight="1"
            android:textSize="21sp" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameVersion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_elemet"
        android:backgroundTint="?colorFragment"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/frameAuthor">

        <TextView
            android:id="@+id/versionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:padding="8dp"
            android:text="@string/version"
            android:textColor="?colorText"
            android:textFontWeight="1"
            android:textSize="21sp" />

        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:padding="8dp"
            android:text="Test 0.04"
            android:textColor="?colorText"
            android:textFontWeight="1"
            android:textSize="21sp" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>